# IMPACT-Z

./: .gitignore  DoxyConfig  ImpactGUI.tar  ImpactZV2.1.tar  ImpactZexeMac  ImpactZexeUbuntu  Readme.md  Readme.txt  license.txt  licenseBSD.doc
.github/workflows/: CI.yml
GUI/: ImpactGUI.py  Readme.txt  iGUI.py
GUI/src/: ConvertFunc.py  ImpactFile.py  ImpactMainWindow.py  ImpactTPlot.py  ImpactTSet.py  ImpactZPlot.py  ImpactZPlotold.py  ImpactZSet.py  LatticeFrame.py  ParticlePlot.py  PreProcessing.py  SlicePlot.py
doc/: ImpactZv2.7.docx  doxygen_entrydb_81374.tmp  doxygen_entrydb_81518.tmp  doxygen_entrydb_82582.tmp  doxygen_entrydb_83151.tmp  doxygen_entrydb_84479.tmp
doc/html/: _acc_simulator_8f90.html  _appl_2mpif_8h.html  _appl_2mpif_8h_source.html  _b_p_m_8f90.html  _beam_bunch_8f90.html  _beam_line_elem_8f90.html  _c_c_d_t_l_8f90.html  _c_c_l_8f90.html  _comp_dom_8f90.html  _const_foc_8f90.html  _contrl_2mpif_8h.html  _contrl_2mpif_8h_source.html  _d_t_l_8f90.html  _data_8f90.html  _data_struct_2mpif_8h.html  _data_struct_2mpif_8h_source.html  _dipole_8f90.html  _distribution_8f90.html  _drift_tube_8f90.html  _e_mfld_8f90.html  _f_f_t_8f90.html  _field_8f90.html  _fldmger_8f90.html  _func_2mpif_8h.html  _func_2mpif_8h_source.html  _input_8f90.html  _multipole_8f90.html  _num_const_8f90.html  _output_8f90.html  _pgrid_8f90.html  _phys_const_8f90.html  _ptclmger_8f90.html  _quadrupole_8f90.html  _s_c_8f90.html  _sol_8f90.html  _sol_r_f_8f90.html  _t_w_s_8f90.html  _timer_8f90.html  _transpose_8f90.html  annotated.html  (+1031 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+60 more)
doc/latex/: _acc_simulator_8f90.tex  _appl_2mpif_8h.tex  _b_p_m_8f90.tex  _beam_bunch_8f90.tex  _beam_line_elem_8f90.tex  _c_c_d_t_l_8f90.tex  _c_c_l_8f90.tex  _comp_dom_8f90.tex  _const_foc_8f90.tex  _contrl_2mpif_8h.tex  _d_t_l_8f90.tex  _data_8f90.tex  _data_struct_2mpif_8h.tex  _dipole_8f90.tex  _distribution_8f90.tex  _drift_tube_8f90.tex  _e_mfld_8f90.tex  _f_f_t_8f90.tex  _field_8f90.tex  _fldmger_8f90.tex  _func_2mpif_8h.tex  _input_8f90.tex  _multipole_8f90.tex  _num_const_8f90.tex  _output_8f90.tex  _pgrid_8f90.tex  _phys_const_8f90.tex  _ptclmger_8f90.tex  _quadrupole_8f90.tex  _s_c_8f90.tex  _sol_8f90.tex  _sol_r_f_8f90.tex  _t_w_s_8f90.tex  _timer_8f90.tex  _transpose_8f90.tex  annotated.tex  dir_03b1dd79130fbe2d3153f181b7eae25c.tex  dir_1c7f3d9b09bac246a465709bc349d1b0.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a5767363705944f85f4e57eac391d0ab.tex  (+536 more)
examples/Example1/: ImpactZ.in  particle.in  rfdata852.in  rfdata868.in  rfdata884.in  rfdata900.in  rfdata916.in  rfdata932.in  rfdata949.in  rfdata965.in  rfdata981.in
examples/Example2/: ImpactZ.in  rfdata1.in
examples/Example3/: ImpactZ.in  particle.in  rfdata41.in
src/: CMakeLists.txt  INSTRUCTIONS.md  Makefile  MakefileP  MakefileS_backup  mpif_single.h  mpistub.f90
src/Appl/: BPM.f90  BeamBunch.f90  BeamLineElem.f90  CCDTL.f90  CCL.f90  CMakeLists.txt  CompDom.f90  ConstFoc.f90  DTL.f90  Dipole.f90  Distribution.f90  DriftTube.f90  EMfld.f90  Field.f90  Multipole.f90  Quadrupole.f90  SC.f90  Sol.f90  SolRF.f90  TWS.f90  Wiggler.f90
src/Contrl/: AccSimulator.f90  CMakeLists.txt  Input.f90  Output.f90  main.f90
src/DataStruct/: CMakeLists.txt  Data.f90  NumConst.f90  Pgrid.f90  PhysConst.f90
src/Func/: CMakeLists.txt  FFT.f90  Fldmger.f90  Ptclmger.f90  Timer.f90  Transpose.f90
utilities/: Engscan.py  RFcoef.f90  Tr2Impact.f90  phaseOptZ.py
utilities/lattice_parser/: const.py  genimpactzin  impactz_parser.py  lattice_parser.py  manual_impactz_parser.md  tags
utilities/lattice_parser/examples/LinacTrack3D/: ImpactZ.in  cleanUp  lte.impz  one  particle.in  rfdata41.in  rfdata42.in
